# homeassistant-rothv2

./: LICENSE  README.md  fix_manifest.py  hacs.json  info.md  pyproject.toml  pyproject.toml.setuptools  pyrightconfig.json  requirements.txt  requirements_dev.txt
.github/workflows/: hassfest.yaml  validate.yaml
custom_components/rothv2/: __init__.py  climate.py  config_flow.py  const.py  manifest.json  services.yaml
custom_components/rothv2/translations/: en.json
tests/: __init__.py  conftest.py  pytest_pytouchline_extended.py  test_config_flow.py
